# punta_cana_tours

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
docs/: google-ads-api-tool-design.rtf  google-analytics-mcp.cursor.example.json
docs/analysis/: 2026-04-01_findings-for-ken.md  2026-04-01_initial-ga4-findings.md  2026-04-02_second-round-findings.md  2026-04-03_march-conversion-collapse.md  crawl_report_2026-04-01.md  crawl_report_2026-04-03.md
docs/context/: 2026-04-02_Ken_reply_after_first_audit.md  chat_conversations_stakeholders.md
docs/context/chats/: 2026-04-02_ken_response.md
scripts/: analyze_ga4.py  crawl_site.py  fetch_ga4.py  fetch_google_ads.py  generate_report.py
