[project]
name = "punta-cana-tours"
version = "0.1.0"
description = "Workspace for Punta Cana yacht/tours SEO and analytics work (GA4, audits, stakeholder context)."
authors = [
    {name = "Alejandro Berrizbeitia", email = "aberriz@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = []

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
